--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,12 @@ set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/")
  
 find_package( OpenCL REQUIRED )
 find_package(SDL2 REQUIRED)
+find_package(SDL2ttf REQUIRED)
 
-include_directories( ${OPENCL_INCLUDE_DIR} ${SDL2_INCLUDE_DIRS} )
+include_directories( ${OPENCL_INCLUDE_DIR} ${SDL2_INCLUDE_DIRS} ${SDL_TTF_INCLUDE_DIRS} )
 
 # Source code of application		
-set (mandelbrotcl_src mandelbrotcl.cpp)
+set (mandelbrotcl_src mandelbrotcl.cpp TextRenderer.cpp)
  
 # Compiler flags
 if (CMAKE_COMPILER_IS_GNUCC)
@@ -34,4 +35,4 @@ endif (CMAKE_COMPILER_IS_GNUCC)
  
 # Set up executable
 add_executable (mandelbrotcl ${mandelbrotcl_src})
-target_link_libraries(mandelbrotcl ${OPENCL_LIBRARIES} ${SDL2_LIBRARIES})
+target_link_libraries(mandelbrotcl ${OPENCL_LIBRARIES} ${SDL2_LIBRARIES} ${SDL2TTF_LIBRARY})
